--- a/static/colorui/main.css
+++ b/static/colorui/main.css
@@ -2450,7 +2450,7 @@ button.cuIcon.lg {
 	vertical-align: middle;
 	margin-left: auto;
 	margin-right: auto;
-	width: 680upx;
+	/* width: 680upx; */
 	max-width: 100%;
 	background-color: #f8f8f8;
 	border-radius: 10upx;
